# rusty-llm

./: .dev.vars.example  .gitignore  Cargo.toml  README.md  cursor.mcp.json  factory.mcp.json  gemini.mcp.json  wrangler.toml
.beads/: config.yaml  issues.jsonl
prd/: rusty-llm-prd.md
src/: dataforseo.rs  errors.rs  lib.rs  providers.rs  validation.rs
tests/: e2e.sh
