[package]
name = "rusty-llm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3"

[dev-dependencies]
regex = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
